Improved code formatting

--- a/_notebooks/2021-03-06-Plotting-LEGO-Data-with-Python.ipynb
+++ b/_notebooks/2021-03-06-Plotting-LEGO-Data-with-Python.ipynb
@@ -562,7 +562,8 @@
     }
    ],
    "source": [
-    "# Get all unique RGB codes from the top 10 new colors and build a color palette with it. This will be used for the plot later.\n",
+    "# Get all unique RGB codes from the top 10 new colors and build a color palette with it. \n",
+    "# This will be used for the plot later.\n",
     "cpalette = sns.color_palette('#'+df_top10_new_colors.RGB.unique())\n",
     "# Get the names of all colors and save in list\n",
     "cnames = df_top10_new_colors.Color.unique()\n",
@@ -572,7 +573,8 @@
     "plt.style.use('fivethirtyeight')\n",
     "\n",
     "# Plot with Seaborn (and distinguish with hue='Color')\n",
-    "ax = sns.lineplot(x='Year', y='Percentage', hue='Color', palette=cpalette, data=df_new_colors, legend=False)\n",
+    "ax = sns.lineplot(x='Year', y='Percentage', hue='Color', \n",
+    "                  palette=cpalette, data=df_new_colors, legend=False)\n",
     "\n",
     "# Set the axis limits\n",
     "plt.xlim(1989, 2021)\n",
@@ -592,8 +594,12 @@
     "ax.set_yticklabels(labels = ['0   ', '5   ', '10   ', '15%'])\n",
     "\n",
     "# Make the title and subtitle\n",
-    "ax.text(x = 1987, y = 17.5, s = \"The rise of new colors\", fontsize = 19.5, weight = 'bold', alpha = .75)\n",
-    "ax.text(x = 1987, y = 16.5, s = 'Distribution of colors that were introduced after 1990', fontsize = 16.5, alpha = .85)\n",
+    "ax.text(x = 1987, y = 17.5, \n",
+    "        s = \"The rise of new colors\", \n",
+    "        fontsize = 19.5, weight = 'bold', alpha = .75)\n",
+    "ax.text(x = 1987, y = 16.5, \n",
+    "        s = 'Distribution of colors that were introduced after 1990', \n",
+    "        fontsize = 16.5, alpha = .85)\n",
     "\n",
     "# Make the footer\n",
     "ax.text(x = 1987, y = -3,\n",
